--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P hero As02</title>
+    <link rel="stylesheet" href="css/As.css">
 </head>
 
-<body>
-    <h1>Programming Hero Assignment 02</h1>
+<body class="inter-font ">
+    <section class="head">
+        <div class="container">
+            <h1 class="first">Tech<span class="color">Wave</span></h1>
+            <nav class="all">
+                <ul class="nav-links">
+                    <li class="item"><a href="">About</a></li>
+                    <li class="item"><a href="">Episodes</a></li>
+                    <li class="item"><a href="">Host</a></li>
+                </ul>
+            </nav>
+
+            <div class="gradient-box">
+                <button class="btn">Subscribe</button>
+            </div>
+
+        </div>
+
+    </section>
 </body>
 
 </html>
