--- a/index.html
+++ b/index.html
@@ -27,6 +27,45 @@
         </div>
 
     </section>
+    <section class="image">
+
+        <div class="hero">
+            <div class="circle-container">
+                <div class="circle">
+                    <img src="css/microphone.png" alt="Microphone" class="microphone">
+                    <span class="badge">NEW</span>
+                </div>
+
+            </div>
+
+            <div class="hero-text">
+                <h1>TechWave</h1>
+                <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                <div class="buttons">
+                    <button class="spotify"><img src="css/spotify.png"> Listen On Spotify</button>
+                    <button class="subscribe"><img src="css/message.png"> Subscribe</button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
+    </section>
+    <section class="cast">
+        <div class="one">
+            <h1>About the Podcast</h1>
+            <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.<br>
+                We break down complex topics into digestible insights, explore productivity strategies that actually
+                work,<br>
+                and share stories of personal growth from industry leaders.<br>
+
+                Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
