--- a/index.html
+++ b/index.html
@@ -63,7 +63,168 @@
 
                 Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
         </div>
+        <section class="stats">
+            <div class="stat-box">
+                <h2>150K+</h2>
+                <p>MONTHLY LISTENERS</p>
+            </div>
+
+            <div class="stat-box">
+                <h2>200+</h2>
+                <p>EPISODES PUBLISHED</p>
+            </div>
+
+            <div class="stat-box">
+                <h2>4.9<span>★</span></h2>
+                <p>AVERAGE RATING</p>
+            </div>
+
+            <div class="stat-box">
+                <h2>50+</h2>
+                <p>INDUSTRY EXPERTS</p>
+            </div>
+        </section>
+        </nav>
     </section>
+
+    <section class="why">
+        <h2>Why Choose TechWave</h2>
+
+        <div class="cards">
+            <div class="card tall">
+                <div class="icon">
+                    <img src="css/headphone.png">
+                </div>
+                <h3>Premium Audio Quality</h3>
+                <p>
+                    Experience crystal-clear sound with professional-grade recording
+                    equipment and expert audio engineering. Every episode is mastered
+                    for optimal listening across all devices and platforms.
+                </p>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <img src="css/device.png">
+                </div>
+                <h3>Mobile Friendly</h3>
+                <p>
+                    Listen on the go with seamless mobile experience and offline downloads.
+                </p>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <img src="css/location.png">
+                </div>
+                <h3>Global Community</h3>
+                <p>
+                    Connect with tech enthusiasts from over 120 countries worldwide.
+                </p>
+            </div>
+
+            <div class="card wide">
+                <div class="icon">
+                    <img src="">
+                </div>
+                <h3>Exclusive Interviews</h3>
+                <p>
+                    Get unprecedented access to industry titans, startup founders,
+                    and tech visionaries. Our host secures exclusive conversations
+                    you wont find anywhere else.
+                </p>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <img src="css/resource.png">
+                </div>
+                <h3>Rich Resources</h3>
+                <p>
+                    Access show notes, transcripts, and additional learning materials
+                    for every episode.
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <section class="science">
+        <h2 class="top">Featured Episodes</h2>
+
+        <div class="musics">
+            <div class="music">
+                <a href="https://youtu.be/irJMX4Lmr-U?si=GZaSj5FgEe_nI8jt" target="_blank" class="thumb">
+
+                    <img src="css/12.jpeg" alt="Episode thumbnail">
+
+                    <div class="play-btn">
+                        <img src="css/youtube.png" alt="Play">
+                    </div>
+
+                </a>
+
+                <div class="content">
+                    <h3>The Future of AI in Everyday Life</h3>
+                    <p>
+                        Exploring how artificial intelligence is transforming our daily
+                        routines and what to expect in the next decade.
+                    </p>
+
+                    <div class="time">
+                        <span></span> 42 min
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://youtu.be/z2QLALwNwQw?si=ZwwuN6_zTNAomqWQ" target="_blank" class="thumb">
+
+                    <img src="css/2.jpeg" alt="Episode thumbnail">
+
+                    <div class="play-btn">
+                        <img src="css/youtube.png" alt="Play">
+                    </div>
+
+                </a>
+
+                <div class="content">
+                    <h3>Building Better Habits for Remote Work</h3>
+                    <p>
+                        Practical strategies for staying productive and maintaining
+                        work-life balance in a remote environment.
+                    </p>
+
+                    <div class="time">
+                        <span></span> 35 min
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://youtu.be/rQEh7d-qa38?si=B4XiWn6co1MSZdTh" target="_blank" class="thumb">
+
+                    <img src="css/3.jpeg" alt="Episode thumbnail">
+
+                    <div class="play-btn">
+                        <img src="css/youtube.png" alt="Play">
+                    </div>
+
+                </a>
+
+                <div class="content">
+                    <h3>Career Growth in Tech: A Roadmap</h3>
+                    <p>
+                        Expert advice on navigating your tech career from junior developer
+                        to senior leadership roles.
+                    </p>
+
+                    <div class="time">
+                        <span></span> 51 min
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 
 
 </body>
