--- a/index.html
+++ b/index.html
@@ -148,82 +148,116 @@
 
 
 
-    <section class="science">
-        <h2 class="top">Featured Episodes</h2>
+    <section class="aura">
+        <section class="science">
+            <h2 class="top">Featured Episodes</h2>
 
-        <div class="musics">
-            <div class="music">
-                <a href="https://youtu.be/irJMX4Lmr-U?si=GZaSj5FgEe_nI8jt" target="_blank" class="thumb">
+            <div class="musics">
+                <div class="music">
+                    <a href="https://youtu.be/irJMX4Lmr-U?si=GZaSj5FgEe_nI8jt" target="_blank" class="thumb">
 
-                    <img src="css/12.jpeg" alt="Episode thumbnail">
+                        <img src="css/12.jpeg" alt="Episode thumbnail">
 
-                    <div class="play-btn">
-                        <img src="css/youtube.png" alt="Play">
+                        <div class="play-btn">
+                            <img src="css/youtube.png" alt="Play">
+                        </div>
+
+                    </a>
+
+                    <div class="content">
+                        <h3>The Future of AI in Everyday Life</h3>
+                        <p>
+                            Exploring how artificial intelligence is transforming our daily
+                            routines and what to expect in the next decade.
+                        </p>
+
+                        <div class="time">
+                            <span></span> 42 min
+                        </div>
                     </div>
+                </div>
+                <div class="card">
+                    <a href="https://youtu.be/z2QLALwNwQw?si=ZwwuN6_zTNAomqWQ" target="_blank" class="thumb">
 
-                </a>
+                        <img src="css/2.jpeg" alt="Episode thumbnail">
 
-                <div class="content">
-                    <h3>The Future of AI in Everyday Life</h3>
+                        <div class="play-btn">
+                            <img src="css/youtube.png" alt="Play">
+                        </div>
+
+                    </a>
+
+                    <div class="content">
+                        <h3>Building Better Habits for Remote Work</h3>
+                        <p>
+                            Practical strategies for staying productive and maintaining
+                            work-life balance in a remote environment.
+                        </p>
+
+                        <div class="time">
+                            <span></span> 35 min
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <a href="https://youtu.be/rQEh7d-qa38?si=B4XiWn6co1MSZdTh" target="_blank" class="thumb">
+
+                        <img src="css/3.jpeg" alt="Episode thumbnail">
+
+                        <div class="play-btn">
+                            <img src="css/youtube.png" alt="Play">
+                        </div>
+
+                    </a>
+
+                    <div class="content">
+                        <h3>Career Growth in Tech: A Roadmap</h3>
+                        <p>
+                            Expert advice on navigating your tech career from junior developer
+                            to senior leadership roles.
+                        </p>
+
+                        <div class="time">
+                            <span></span> 51 min
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="host-section">
+            <h2>Meet The Host</h2>
+
+            <div class="host-card">
+                <div class="host-image">
+                    <img src="css/host.png" alt="Alex Kumar">
+                </div>
+
+                <div class="host-content">
+                    <h3>Alex Kumar</h3>
+
                     <p>
-                        Exploring how artificial intelligence is transforming our daily
-                        routines and what to expect in the next decade.
+                        Tech entrepreneur, productivity expert, and lifelong learner. Alex has
+                        been in the tech industry for over 10 years, working with startups and
+                        Fortune 500 companies. Through TechWave, Alex shares insights from
+                        industry leaders and practical advice for anyone looking to grow in tech.
                     </p>
 
-                    <div class="time">
-                        <span></span> 42 min
+                    <div class="socials">
+                        <a href="#"><img src="css/linkedin.png" alt=""></a>
+                        <a href="#"><img src="css/twitter.png" alt=""></a>
+                        <a href="#"><img src="css/x.png" alt=""></a>
+                        <a href="#"><img src="css/youtube.png" alt=""></a>
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <a href="https://youtu.be/z2QLALwNwQw?si=ZwwuN6_zTNAomqWQ" target="_blank" class="thumb">
+        </section>
 
-                    <img src="css/2.jpeg" alt="Episode thumbnail">
 
-                    <div class="play-btn">
-                        <img src="css/youtube.png" alt="Play">
-                    </div>
 
-                </a>
-
-                <div class="content">
-                    <h3>Building Better Habits for Remote Work</h3>
-                    <p>
-                        Practical strategies for staying productive and maintaining
-                        work-life balance in a remote environment.
-                    </p>
-
-                    <div class="time">
-                        <span></span> 35 min
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <a href="https://youtu.be/rQEh7d-qa38?si=B4XiWn6co1MSZdTh" target="_blank" class="thumb">
-
-                    <img src="css/3.jpeg" alt="Episode thumbnail">
-
-                    <div class="play-btn">
-                        <img src="css/youtube.png" alt="Play">
-                    </div>
-
-                </a>
-
-                <div class="content">
-                    <h3>Career Growth in Tech: A Roadmap</h3>
-                    <p>
-                        Expert advice on navigating your tech career from junior developer
-                        to senior leadership roles.
-                    </p>
-
-                    <div class="time">
-                        <span></span> 51 min
-                    </div>
-                </div>
-            </div>
-
-        </div>
     </section>
+
 
 
 
