--- a/index.html
+++ b/index.html
@@ -259,6 +259,26 @@
     </section>
 
 
+    <section class="final">
+        <div class="overlay">
+            <h1 class="logo">
+                Tech<span>Wave</span>
+            </h1>
+
+            <div class="platforms">
+                <a href="#"><img src="css/spotify.png" alt="Spotify"></a>
+                <a href="#"><img src="css/apple-podcast.png" alt="Apple Podcasts"></a>
+                <a href="#"><img src="css/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="css/twitter.png" alt="Twitter"></a>
+            </div>
+
+            <p class="copyright">
+                © 2026 TechWave Podcast. All rights reserved.
+            </p>
+        </div>
+    </section>
+
+
 
 
 </body>
